--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
   </head>
   <body class="bg-yellow-500">
     <h1 class="text-blac">Tailwind CSS</h1>
+    <p>This is the first one</p>
   </body>
 </html>
